# bellwether

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  forward.yaml  infoagg.yaml  infoagg_uncapped.yaml  live.yaml  live_good.yaml  polymarket.yaml
experiments/: README.md
experiments/06-first-benchmark/: README.md
experiments/07-vs-polymarket/: README.md
experiments/info-aggregation/: 02-market-design-probe.md  03-rationale-market.md  04-deliberation-depth.md  05-unstructured-evidence.md  06-agent-framing.md  07-diversity.md  results.md
experiments/loop/: ledger.jsonl  ledger.md  live-experiments-ledger.md
notes/: ideas.md
research/: design-questions.md  intro.md  landscape.md  open-problems.md  preregistration.md  references.md  self-improving-loop.md  study.md
scripts/: demo_live.py  forecast_open.py  predict_deliberation.py  pull_questions.py  run_benchmark.py  run_confederate.py  run_decoupling.py  run_depth.py  run_diversity.py  run_forward.py  run_framing.py  run_infoagg.py  run_loop.py  score_forecastbench.py  score_forward.py
src/bellwether/: __init__.py  calibrate.py  conditions.py  config.py  loop.py  runner.py  scoring.py
src/bellwether/agents/: __init__.py  agent.py  llm.py  swarm.py
src/bellwether/aggregate/: __init__.py  ensemble.py  market.py  naive.py  tuned.py
src/bellwether/evidence/: __init__.py  base.py  mock_internal.py  web.py
src/bellwether/market/: __init__.py  lmsr.py  trading.py
src/bellwether/questions/: __init__.py  base.py  forecastbench.py  manifold.py  mock_internal.py  polymarket.py  synthetic.py
tests/: test_agents.py  test_aggregators.py  test_calibrate.py  test_evidence.py  test_lmsr.py  test_loop.py  test_questions.py  test_runner.py  test_scoring.py  test_synthetic.py  test_trading.py
