[project]
name = "bellwether"
version = "0.1.0"
description = "Benchmark harness for an AI-agent prediction market (does a swarm-traded LMSR market beat simpler aggregation?)"
requires-python = ">=3.11"
dependencies = [
    # core scientific / config (needed for the LMSR engine + scoring + config)
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    # agents + experiment tracking + scoring (needed from Phase 3 onward)
    "litellm>=1.40",
    "mlflow>=2.12",
    "netcal>=1.3",
    "pm-rank>=0.1",
    "httpx>=0.27",
    "pandas>=2.2",
    "matplotlib>=3.8",
    # benchmark backbone (needed from Phase 2/6)
    "forecasting-tools>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bellwether"]

[tool.pytest.ini_options]
# Run tests without an editable install: put src/ on the path.
pythonpath = ["src"]
testpaths = ["tests"]
