[project]
name = "bellwether"
version = "0.1.0"
description = "Benchmark harness for an AI-agent prediction market (does a swarm-traded LMSR market beat simpler aggregation?)"
requires-python = ">=3.11"
dependencies = [
    # core: LMSR engine, scoring, config, swarm orchestration, experiment tracking.
    # Enough to run the whole benchmark OFFLINE (FakeLLM + mock data) and log to MLflow.
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "mlflow>=2.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# Live runs: real models via OpenRouter + network question/benchmark sources.
live = [
    "litellm>=1.40",
    "httpx>=0.27",
    "forecasting-tools>=0.2",
]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bellwether"]

[tool.pytest.ini_options]
# Run tests without an editable install: put src/ on the path.
pythonpath = ["src"]
testpaths = ["tests"]
